# FlappyBird

./: .gitignore  CMakeLists.txt  CmakeLists.txt
Engine/: CMakeLists.txt
Engine/res/shaders/: font_vs.glsl  sprite_fs.glsl  sprite_vs.glsl  text_fs.glsl  ui_fs.glsl
Engine/src/: Engine.h  engine_pch.h
Engine/src/Engine/App/: App.cpp  App.h  AppManager.cpp  AppManager.h  Window.cpp  Window.h
Engine/src/Engine/Audio/: AudioClip.cpp  AudioClip.h  AudioDevice.cpp  AudioDevice.h  AudioSource.cpp  AudioSource.h  SoundBuffer.cpp  SoundBuffer.h
Engine/src/Engine/Input/: Input.cpp  Input.h  Key.h  Keyboard.cpp  Keyboard.h
Engine/src/Engine/Renderer/: BatchRenderer.cpp  BatchRenderer.h  Camera.cpp  Camera.h  OpenGLGraphics.cpp  OpenGLGraphics.h  Shader.cpp  Shader.h  Stats.cpp  Stats.h  Texture2D.cpp  Texture2D.h  Vertex.h  Viewport.cpp  Viewport.h
Engine/src/Engine/Renderer/UI/: Font.cpp  Font.h  ImGuiManager.cpp  ImGuiManager.h  TextRenderer.cpp  TextRenderer.h  UIRenderer.cpp  UIRenderer.h
Engine/src/Engine/Utils/: EngineException.cpp  EngineException.h  File.cpp  File.h  Time.cpp  Time.h
FlappyBird/: CMakeLists.txt
FlappyBird/src/: Background.cpp  Background.h  Bird.cpp  Bird.h  FlappyBirdApp.cpp  FlappyBirdApp.h  Pipe.cpp  Pipe.h  WinMain.cpp  resource.rc
cmake/: libs.cmake
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb/include/stb/: stb_image.h
res/shaders/: shader.frag  shader.vert
src/: main.cpp
src/App/: Window.cpp  Window.h
src/Renderer/: OrthographicCamera.cpp  OrthographicCamera.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  Viewport.cpp  Viewport.h
src/Utils/: Exception.cpp  Exception.h  File.cpp  File.h
